# VRV-RSS

./: README.md  api.py  generators.py  main.py  pyproject.toml
templates/: index.html  seasons.html
