[tool.poetry]
name = "vrv-rss"
version = "0.1.0"
description = "Turn a VRV show or season into an RSS feed."
authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rfeed = "^1.1.1"
Flask = "^2.0.1"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
